# code

./: LICENSE
ab-test-calculator-cli/: .gitignore  README.md  pyproject.toml
ab-test-calculator-cli/examples/: sample_data.csv
ab-test-calculator-cli/src/ab_test_calculator_cli/: __init__.py  cli.py  stats.py
ab-test-calculator-cli/tests/: conftest.py  test_cli.py  test_stats.py
accept-header-resolver/: .gitignore  README.md  pyproject.toml  requirements.txt
accept-header-resolver/examples/: basic.py
accept-header-resolver/src/accept_header_resolver/: __init__.py  cli.py  resolver.py
accept-header-resolver/tests/: conftest.py  test_resolver.py
adaptive-timeout-calibrator/: .gitignore  README.md  pyproject.toml
adaptive-timeout-calibrator/examples/: sample_histogram.json
adaptive-timeout-calibrator/src/adaptive_timeout_calibrator/: cli.py  fitter.py  models.py
adaptive-timeout-calibrator/tests/: test_cli.py  test_fitter.py
aio-task-monitor/: .gitignore  README.md  pyproject.toml
aio-task-monitor/examples/: simple.py
aio-task-monitor/src/aio_task_monitor/: __init__.py  cli.py  snapshot.py
aio-task-monitor/tests/: test_cli.py  test_snapshot.py
alert-rule-tester/: .gitignore  README.md  pyproject.toml  requirements.txt
alert-rule-tester/src/alert_rule_tester/: cli.py  simulator.py
alert-rule-tester/tests/: test_simulator.py
arch-boundary-auditor/: .gitignore  README.md  pyproject.toml
arch-boundary-auditor/src/arch_boundary_auditor/: analyzer.py  cli.py  config.py  parser.py  reporter.py  types.py
arch-boundary-auditor/tests/: test_analyzer.py  test_cli.py  test_config.py  test_parser.py
ascii-evo-artist/: README.md  (+1 more)
async-block-detector/: README.md  pyproject.toml
async-block-detector/docs/: architecture.md
async-block-detector/examples/: blocking_example.py
async-block-detector/src/async_block_detector/: cli.py  detector.py  rules.py
async-block-detector/tests/: conftest.py  test_detector.py  test_rules.py
async-deadline-linter/: .gitignore  README.md  pyproject.toml
async-deadline-linter/tests/: test_cli.py  test_core.py  test_edge_cases.py  test_fixes.py  test_visitor.py
async-timeline/: .gitignore  README.md  pyproject.toml
async-timeline/examples/: blocking.py  concurrent.py
async-timeline/tests/: test_cli.py  test_profiler.py  test_reporter.py
avro-schema-diff-cli/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
avro-schema-diff-cli/examples/: complex_new.avsc  complex_old.avsc  simple_new.avsc  simple_old.avsc
avro-schema-diff-cli/tests/: test_cli.py  test_differ.py
backpressure-analyzer/: .gitignore  README.md  pyproject.toml  requirements.txt
backpressure-analyzer/tests/: test_analyzer.py
batch-file-renamer/: .gitignore  README.md  pyproject.toml  requirements.txt
batch-file-renamer/examples/: rules-example.yaml
batch-file-renamer/tests/: test_config.py  test_renamer.py
benchstat-cli/: README.md  pyproject.toml  requirements.txt
benchstat-cli/tests/: test_cli.py  test_parser.py  test_stats.py
bidi-text-security-cli/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bidi-text-security-cli/tests/: test_cli.py  test_scanner.py
binary-diff-cli/: .gitignore  README.md  pyproject.toml  requirements.txt
binary-diff-cli/tests/: conftest.py  test_analyzer.py  test_cli.py  test_differ.py
binary-explorer-tui/: .gitignore  README.md  pyproject.toml  pytest.ini
binary-explorer-tui/tests/: conftest.py  test_analyzer.py  test_cli.py  test_utils.py
binary-size-analyzer/: .gitignore  README.md  pyproject.toml  requirements.txt
binary-size-analyzer/tests/: conftest.py  test_analyzer.py  test_main.py  test_visualizers.py
blast-radius-cli/: README.md  pyproject.toml  requirements.txt
blast-radius-cli/tests/: conftest.py  test_cli.py  test_core.py  test_graph.py
bloom-filter-cli/: .gitignore  README.md  pyproject.toml
bloom-filter-cli/docs/: architecture.md
bloom-filter-cli/examples/: basic.yaml
bloom-filter-cli/tests/: test_calculator.py  test_simulator.py
build-context-slimmer/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
build-context-slimmer/tests/: test_analyzer.py  test_cli.py  test_parser.py
build-log-analyzer/: .gitignore  README.md  pyproject.toml  requirements.txt
build-log-analyzer/tests/: test_cli.py  test_models.py  test_parsers.py
capacity-forecaster/: .gitignore  README.md  pyproject.toml  requirements.txt
capacity-forecaster/examples/: sample.csv
capacity-forecaster/tests/: test_ingest.py  test_models.py  test_simulation.py
cert-transparency-cli/: .gitignore  README.md  pyproject.toml  requirements.txt
cert-transparency-cli/tests/: test_cli.py  test_ct_client.py  test_parser.py
chaos-proxy/: .gitignore  README.md  pyproject.toml
chaos-proxy/examples/: config.yaml
chaos-proxy/tests/: conftest.py  test_cli.py  test_config.py  test_impairments.py  test_stats.py
circuit-breaker-simulator/: .gitignore  README.md  pyproject.toml
circuit-breaker-simulator/examples/: basic.yaml
circuit-breaker-simulator/tests/: conftest.py  test_breaker.py  test_cli.py  test_models.py  test_simulator.py
class-diagram-cli/: .gitignore  README.md  pyproject.toml
class-diagram-cli/examples/: README.md  simple.py
class-diagram-cli/tests/: test_cli.py  test_collector.py  test_generator.py
cli-benchmarker/: .gitignore  README.md  pyproject.toml
cli-benchmarker/tests/: test_benchmark.py  test_cli.py  test_reporter.py
clock-drift-detector/: .gitignore  README.md  pyproject.toml  requirements.txt
clock-drift-detector/examples/: sample_events.jsonl
clock-drift-detector/tests/: test_analyzer.py  test_cli.py  test_report.py
code-hotspot-detector/: .gitignore  README.md  pyproject.toml
code-hotspot-detector/examples/: basic_usage.py
code-hotspot-detector/tests/: conftest.py  test_core.py  test_edge_cases.py  test_report.py
code-ownership-cli/: .gitignore  README.md  pyproject.toml  requirements.txt
code-ownership-cli/tests/: conftest.py  test_blame.py  test_cli.py  test_renderer.py  test_stats.py
(+3436 files in other folders)
