[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accept-header-resolver"
version = "0.1.0"
description = "RFC 9110 compliant Accept header resolver"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arya Sianati"}]
requires-python = ">=3.11"
dependencies = []