[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-timeout-calibrator"
version = "0.1.0"
description = "Calculate production-grade adaptive timeouts from latency data"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arya Sianati"}]
requires-python = ">=3.11"
dependencies = ["click>=8.1", "rich>=13.0", "numpy>=1.26", "scipy>=1.11", "pyyaml>=6.0", "pydantic>=2.0"]

[project.scripts]
adaptive-timeout-calibrator = "adaptive_timeout_calibrator.cli:cli"