[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async-deadline-linter"
version = "0.1.0"
description = "Detect missing deadline propagation in async code"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arya Sianati"}]
requires-python = ">=3.11"
dependencies = ["rich>=13", "typer>=0.9", "libcst>=1.1"]

[project.scripts]
async-deadline-linter = "async_deadline_linter.cli:app"