[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avro-schema-diff-cli"
dynamic = ["version"]
description = "CLI to diff Avro schemas and check compatibility"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Arya Sianati", email = "arya@example.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.7.0",
]

[project.scripts]
avro-schema-diff = "avro_schema_diff_cli.cli:app"

[project.urls]
Homepage = "https://github.com/cycoders/code/tree/main/avro-schema-diff-cli"
Repository = "https://github.com/cycoders/code.git"

[tool.hatch.version]
path = "src/avro_schema_diff_cli/__init__.py"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --strict-config"
