[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "benchstat-cli"
version = "0.1.0"
description = "Statistical benchmark comparator"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arya Sianati"}]
requires-python = ">=3.11"
dependencies = ["click>=8.1", "rich>=13.0", "numpy>=1.24"]

[project.scripts]
benchstat = "benchstat_cli.cli:cli"