[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-diff-cli"
version = "0.1.0"
dynamic = ["version"]
description = "Terminal binary file comparator with hex views and entropy analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Arya Sianati", email = "arya@cycoders.com"}]
dependencies = [
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.scripts]
binary-diff-cli = "binary_diff_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning:.*typer.*",
]
