[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = 'py311'

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I", "T20", "ARG", "C4", "DTZ"]
ignore = ["T201"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"