[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blast-radius-cli"
version = "0.1.0"
description = "Calculate blast radius of code changes via call graphs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arya Sianati"}]
requires-python = ">=3.11"
dependencies = ["rich>=13", "typer>=0.9", "astroid>=3.0", "networkx>=3.2"]

[project.scripts]
blast-radius = "blast_radius_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"