[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capacity-forecaster"
version = "0.1.0"
description = "Infrastructure capacity forecasting with confidence intervals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["click>=8.1", "numpy>=1.26", "pandas>=2.1", "rich>=13.7", "pyyaml>=6.0"]

[project.scripts]
capacity-forecaster = "capacity_forecaster.cli:cli"