[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-breaker-simulator"
dynamic = ["version"]
description = "CLI to simulate circuit breakers under load for resilience tuning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Arya Sianati", email = "arya@cycoders.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Distributed Systems",
]
dependencies = [
  "typer >= 0.9.0",
  "rich >= 13.0.0",
  "pydantic >= 2.0.0",
  "pyyaml >= 6.0.0",
]
[project.optional-dependencies]
dev = [
  "pytest >= 7.0.0",
  "rich-click >= 1.7.0",
  "pytest-cov >= 4.0.0",
]
[project.scripts]
circuit-breaker-simulator = "circuit_breaker_simulator.cli:app"

[project.urls]
Homepage = "https://github.com/cycoders/code/tree/main/circuit-breaker-simulator"
Repository = "https://github.com/cycoders/code"

[tool.hatch.version]
path = "src/circuit_breaker_simulator/__init__.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=circuit_breaker_simulator --cov-report=term-missing"
testpaths = ["tests"]
