[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-benchmarker"
version = "0.1.0"
description = "Precisely benchmarks CLI commands and scripts measuring wall time, CPU usage, peak memory with rich statistical tables and sparklines"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Arya Sianati", email = "arya@cycoders.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Benchmark",
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.7.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.1.0",
]

[project.scripts]
cli-benchmarker = "cli_benchmarker.cli:app"

[project.urls]
Homepage = "https://github.com/cycoders/code/tree/main/cli-benchmarker"
Repository = "https://github.com/cycoders/code.git"

[tool.ruff]
line-length = 100
target-version = 'py311'

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "W", "I", "C4", "T20", "UP", "PD", "PGH", "PL", "RSE", "TID", "ARG", "PTH"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:asyncio",
]
markers = [
    "slow: Slow tests.",
    "serial: Serial tests (run one at a time).",
]
