[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clock-drift-detector"
version = "0.1.0"
description = "Detect clock skew in distributed systems"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arya Sianati"}]
requires-python = ">=3.11"
dependencies = ["click>=8.1", "rich>=13.0", "numpy>=1.24", "scipy>=1.10", "pandas>=2.0", "jinja2>=3.1"]

[project.scripts]
clock-drift-detector = "clock_drift_detector.cli:cli"