[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-hotspot-detector"
version = "0.1.0"
description = "Identify refactoring hotspots via complexity and churn correlation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["gitpython>=3.1", "radon>=6.0", "rich>=13.0", "click>=8.1"]

[project.scripts]
code-hotspot-detector = "code_hotspot_detector.cli:main"